<resources>
    <string name="app_title">REBTEL</string>
    <string name="title_countries">Countries</string>

    <!--country details-->
    <string name="country_capital">Capital</string>
    <string name="country_region">Region</string>
    <string name="country_sub_region">Sub Region</string>
    <string name="country_population">Population</string>
    <string name="country_native_name">Native Name</string>
    <string name="country_currency">Currency</string>
    <string name="country_timezone">Time Zone</string>

</resources>
