<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".ui.country.detail.CountryDetailActivity">

        <include
                android:id="@+id/top_tool_bar"
                layout="@layout/top_tool_bar"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/top_tool_bar"
                android:weightSum="100"
                android:orientation="vertical"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/padding_0dp"
                    android:layout_weight="36"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:background="@color/red">

                <View
                        android:layout_width="@dimen/padding_0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".18"/>

                <ImageView
                        android:id="@+id/iv_country_flag"
                        android:layout_width="@dimen/padding_0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/padding_16dp"
                        android:layout_marginBottom="@dimen/padding_16dp"
                        android:scaleType="fitXY"
                        android:layout_weight=".64"/>

                <View
                        android:layout_width="@dimen/padding_0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".18"/>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                    android:id="@+id/cv_main_runit_pass"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/padding_0dp"
                    android:layout_weight="64"
                    android:layout_margin="@dimen/padding_16dp"
                    app:cardCornerRadius="@dimen/padding_8dp">
                <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:scrollbars="none">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/padding_8dp"
                                android:layout_marginBottom="@dimen/padding_8dp"
                                android:layout_marginLeft="@dimen/padding_16dp"
                                android:layout_marginRight="@dimen/padding_16dp"
                                android:orientation="horizontal">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:layout_marginTop="@dimen/padding_8dp"
                                    android:layout_marginLeft="@dimen/padding_24dp"
                                    android:layout_marginRight="@dimen/padding_24dp"
                                    android:textColor="@color/blackSecondary"
                                    android:textSize="@dimen/text_14sp"
                                    android:text="@string/country_region"/>

                            <TextView
                                    android:id="@+id/tv_country_region"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:layout_marginTop="@dimen/padding_8dp"
                                    android:layout_marginLeft="@dimen/padding_24dp"
                                    android:layout_marginRight="@dimen/padding_24dp"
                                    android:textColor="@color/blackSecondary"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/text_14sp"/>
                        </RelativeLayout>
                        <View android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:background="@drawable/divider"/>

                        <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/padding_8dp"
                                android:layout_marginBottom="@dimen/padding_8dp"
                                android:layout_marginLeft="@dimen/padding_16dp"
                                android:layout_marginRight="@dimen/padding_16dp"
                                android:orientation="horizontal">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:layout_marginTop="@dimen/padding_8dp"
                                    android:layout_marginLeft="@dimen/padding_24dp"
                                    android:layout_marginRight="@dimen/padding_24dp"
                                    android:textColor="@color/blackSecondary"
                                    android:textSize="@dimen/text_14sp"
                                    android:text="@string/country_sub_region"/>

                            <TextView
                                    android:id="@+id/tv_country_sub_region"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:layout_marginTop="@dimen/padding_8dp"
                                    android:layout_marginLeft="@dimen/padding_24dp"
                                    android:layout_marginRight="@dimen/padding_24dp"
                                    android:textColor="@color/blackSecondary"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/text_14sp"/>
                        </RelativeLayout>
                        <View android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:background="@drawable/divider"/>
                        <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/padding_8dp"
                                android:layout_marginBottom="@dimen/padding_8dp"
                                android:layout_marginLeft="@dimen/padding_16dp"
                                android:layout_marginRight="@dimen/padding_16dp"
                                android:orientation="horizontal">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:layout_marginTop="@dimen/padding_8dp"
                                    android:layout_marginLeft="@dimen/padding_24dp"
                                    android:layout_marginRight="@dimen/padding_24dp"
                                    android:textColor="@color/blackSecondary"
                                    android:textSize="@dimen/text_14sp"
                                    android:text="@string/country_capital"/>

                            <TextView
                                    android:id="@+id/tv_country_capital"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:layout_marginTop="@dimen/padding_8dp"
                                    android:layout_marginLeft="@dimen/padding_24dp"
                                    android:layout_marginRight="@dimen/padding_24dp"
                                    android:textColor="@color/blackSecondary"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/text_14sp"/>
                        </RelativeLayout>
                        <View android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:background="@drawable/divider"/>
                        <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/padding_8dp"
                                android:layout_marginBottom="@dimen/padding_8dp"
                                android:layout_marginLeft="@dimen/padding_16dp"
                                android:layout_marginRight="@dimen/padding_16dp"
                                android:orientation="horizontal">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:layout_marginTop="@dimen/padding_8dp"
                                    android:layout_marginLeft="@dimen/padding_24dp"
                                    android:layout_marginRight="@dimen/padding_24dp"
                                    android:textColor="@color/blackSecondary"
                                    android:textSize="@dimen/text_14sp"
                                    android:text="@string/country_population"/>

                            <TextView
                                    android:id="@+id/tv_country_population"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:layout_marginTop="@dimen/padding_8dp"
                                    android:layout_marginLeft="@dimen/padding_24dp"
                                    android:layout_marginRight="@dimen/padding_24dp"
                                    android:textColor="@color/blackSecondary"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/text_14sp"/>
                        </RelativeLayout>
                        <View android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:background="@drawable/divider"/>
                        <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/padding_8dp"
                                android:layout_marginBottom="@dimen/padding_8dp"
                                android:layout_marginLeft="@dimen/padding_16dp"
                                android:layout_marginRight="@dimen/padding_16dp"
                                android:orientation="horizontal">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:layout_marginTop="@dimen/padding_8dp"
                                    android:layout_marginLeft="@dimen/padding_24dp"
                                    android:layout_marginRight="@dimen/padding_24dp"
                                    android:textColor="@color/blackSecondary"
                                    android:textSize="@dimen/text_14sp"
                                    android:text="@string/country_native_name"/>

                            <TextView
                                    android:id="@+id/tv_country_native_name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:layout_marginTop="@dimen/padding_8dp"
                                    android:layout_marginLeft="@dimen/padding_24dp"
                                    android:layout_marginRight="@dimen/padding_24dp"
                                    android:textColor="@color/blackSecondary"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/text_14sp"/>
                        </RelativeLayout>
                        <View android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:background="@drawable/divider"/>
                        <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/padding_8dp"
                                android:layout_marginBottom="@dimen/padding_8dp"
                                android:layout_marginLeft="@dimen/padding_16dp"
                                android:layout_marginRight="@dimen/padding_16dp"
                                android:orientation="horizontal">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:layout_marginTop="@dimen/padding_8dp"
                                    android:layout_marginLeft="@dimen/padding_24dp"
                                    android:layout_marginRight="@dimen/padding_24dp"
                                    android:textColor="@color/blackSecondary"
                                    android:textSize="@dimen/text_14sp"
                                    android:text="@string/country_currency"/>

                            <TextView
                                    android:id="@+id/tv_country_currency"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:gravity="right"
                                    android:layout_marginTop="@dimen/padding_8dp"
                                    android:layout_marginLeft="@dimen/padding_24dp"
                                    android:layout_marginRight="@dimen/padding_24dp"
                                    android:textColor="@color/blackSecondary"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/text_14sp"/>
                        </RelativeLayout>
                        <View android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:background="@drawable/divider"/>
                        <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/padding_8dp"
                                android:layout_marginBottom="@dimen/padding_8dp"
                                android:layout_marginLeft="@dimen/padding_16dp"
                                android:layout_marginRight="@dimen/padding_16dp"
                                android:orientation="horizontal">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:layout_marginTop="@dimen/padding_8dp"
                                    android:layout_marginLeft="@dimen/padding_24dp"
                                    android:layout_marginRight="@dimen/padding_24dp"
                                    android:textColor="@color/blackSecondary"
                                    android:textSize="@dimen/text_14sp"
                                    android:text="@string/country_timezone"/>

                            <TextView
                                    android:id="@+id/tv_country_timezone"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:gravity="right"
                                    android:layout_marginTop="@dimen/padding_8dp"
                                    android:layout_marginLeft="@dimen/padding_24dp"
                                    android:layout_marginRight="@dimen/padding_24dp"
                                    android:textColor="@color/blackSecondary"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/text_14sp"/>
                        </RelativeLayout>
                    </LinearLayout>


                </ScrollView>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </RelativeLayout>
</layout>